@startuml

title __AMI's Class Diagram__\n

  namespace  {
    class BetaImprovement {
    }
  }
  

  namespace  {
    class ClosenessConstructive {
    }
  }
  

  namespace  {
    class ClosenessImprovement {
    }
  }
  

  namespace  {
    class ComparadorCloseness {
    }
  }
  

  namespace  {
    class ComparadorClosenessInverso {
    }
  }
  

  namespace  {
    class ComparadorGrado {
    }
  }
  

  namespace  {
    interface Constructive {
    }
  }
  

  namespace  {
    class GradeConstructive {
    }
  }
  

  namespace  {
    interface Grafo {
    }
  }
  

  namespace  {
    class GrafoND {
    }
  }
  

  namespace  {
    interface Improvement {
    }
  }
  

  namespace  {
    class Instance {
    }
  }
  

  namespace  {
    class NormalClosenessConstructive {
    }
  }
  

  namespace  {
    class Principal {
    }
  }
  

  namespace  {
    class PrincipalEstudioRandom {
    }
  }
  

  namespace  {
    class RandomConstructive {
    }
  }
  

  namespace  {
    class RandomImprovement {
    }
  }
  

  namespace  {
    class Solution {
    }
  }
  

  BetaImprovement .up.|> Improvement
  ClosenessConstructive .up.|> Constructive
  ClosenessConstructive o-- ComparadorCloseness : comparadorCentralidad
  ClosenessImprovement .up.|> Improvement
  ComparadorCloseness .up.|> java.util.Comparator
  ComparadorClosenessInverso .up.|> java.util.Comparator
  ComparadorGrado .up.|> java.util.Comparator
  GradeConstructive .up.|> Constructive
  GradeConstructive o-- ComparadorGrado : comparadorGrado
  GrafoND .up.|> Grafo
  NormalClosenessConstructive .up.|> Constructive
  NormalClosenessConstructive o-- ComparadorCloseness : comparadorCentralidad
  RandomConstructive .up.|> Constructive
  RandomImprovement .up.|> Improvement
  Solution o-- Grafo : grafo


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
